Fix EnsureTraversabilityStep splitting failures and refactor using ear clipping (#3)
* :bug: Fix NullPointerException in EnsureTraversabilityStep when
splitting polygons

* :sparkles: Add FixConnectivityStep to remove disconnected objects from
the map

* :bug: Fix EnsureTraversabilityStep falling to split some objects correctly

* :bug: Fix EnsureTraversabilityStep failing to split some objects correctly

* :recycle: Extract StepPanelBuilder to encapsulate Gridbag layout state

* Add SplitSelfIntersectingBuildingsStep to fix self-intersecting buildings

* :zap: Prevent zero-length edges from being created during map conversion

* :pencil2: Remove unused iteration variable

* :recycle: Changes to visibility and additions to the documentation

* :recycle: Refactor MakeObjectsStep for readability and maintainability

* :bug: Fix parallel edge containment check for diagonal lines

* Add collectEdges utility method to ConvertTools

* Add findInteriorIntersection and isEndpoint utilities to ConvertTools

* :sparkles: Add isInteriorNode utility method to ConvertTools

* :sparkles: Add sortedAlongEdge utility method to ConvertTools

* :zap: Add Collection-based splitEdge overload to TemporaryMap and change return type to void

* :sparkles: Add SplitRoadBuildingIntersectionStep

* :bug: Fix snapping artifacts in areaToTemporaryPassableShapes and remove unuse step

* :fire: Remove PruneOrphanBuildingsStep

* :horse: Optimize edge splitting by replacing multi-pass full scan with work queue

* :recycle: Refactoring CleanOSMStep

* :bug: Change steps EnsureTraversabilityStep and SplitIntersectingEdgesStep

* :construction: WIP: Add debug gui systems

* :sparkles: Add point-in-triangle test methods to GeometryTools2D

* :recycle: Change order of FixConnectivityStep before SplitIntersectingEdgesStep

* :zap: Add method to create multiple debug objects

* :construct: WIP

* :construct: WIP

* :sparkles: Add getMidpoint method to Line2D

* :construction: WIP

* :recycle: Refactor En